--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -10,8 +10,12 @@ body{
 }
 
 .HeaderContainer{
+    z-index: 0;
+    background-color: hsl(9, 60%, 92%);
     display: flex;
     flex-direction: column;
+    box-shadow: 0px 5px 10px hsl(0, 0%, 20%);
+    padding: 1rem 1.5rem;
 }
 
 .Title{
