--- a/src/components/MainContent.css
+++ b/src/components/MainContent.css
@@ -5,7 +5,7 @@
 
 fieldset{
     display: grid;
-    grid-template-columns: auto 1fr;
+    grid-template-columns: minmax(auto, 1fr) 3fr;
     padding: 2rem;
     gap: 1.5rem;
 }
@@ -18,8 +18,4 @@ input{
 textarea{
     font-size: 1.2rem;
     padding: 0.5rem;
-}
-
-.PersonalProfile{
-
 }
