--- a/src/components/MainContent.css
+++ b/src/components/MainContent.css
@@ -3,6 +3,11 @@
     padding: 1rem 1.5rem;
 }
 
+.pageInfo{
+    padding: 1rem;
+    color: red;
+}
+
 fieldset{
     display: grid;
     grid-template-columns: minmax(auto, 1fr) 3fr;
@@ -18,4 +23,13 @@ input{
 textarea{
     font-size: 1.2rem;
     padding: 0.5rem;
+}
+
+button{
+    grid-column-start: 1;
+    grid-column-end: -1;
+    max-width: 60%;
+    justify-self: center;
+    font-size: 1.3rem;
+    padding: 1ch;
 }
