--- a/src/App.css
+++ b/src/App.css
@@ -4,5 +4,7 @@
   text-align: center;
   display: grid;
   grid-template-rows: auto 1fr auto;
-  height: 100vh;
+  /* height: 100vh; */
+  max-width: 100vw;
 }
+
