--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -15,6 +15,7 @@ body{
     display: flex;
     flex-direction: column;
     box-shadow: 0px 5px 10px hsl(0, 0%, 20%);
+    max-width: 100vw;
     padding: 1rem 1.5rem;
 }
 
