--- a/src/components/MainContent.css
+++ b/src/components/MainContent.css
@@ -1,34 +1,8 @@
 .MainContainer{
     background-color: hsl(165, 39%, 90%);
-    padding: 1rem 1.5rem;
+    max-width: 100vw;
 }
 
 .pageInfo{
     padding: 1rem;
-}
-
-fieldset{
-    display: grid;
-    grid-template-columns: minmax(auto, 1fr) 3fr;
-    padding: 2rem;
-    gap: 1.5rem;
-}
-
-input{
-    font-size: 1.2rem;
-    padding: 0.5rem;
-}
-
-textarea{
-    font-size: 1.2rem;
-    padding: 0.5rem;
-}
-
-button{
-    grid-column-start: 1;
-    grid-column-end: -1;
-    max-width: 60%;
-    justify-self: center;
-    font-size: 1.3rem;
-    padding: 1ch;
 }
