--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -11,7 +11,7 @@ body{
 
 .HeaderContainer{
     z-index: 0;
-    background-color: hsl(9, 60%, 92%);
+    background-color: #f7e2de;
     display: flex;
     flex-direction: column;
     box-shadow: 0px 5px 10px hsl(0, 0%, 20%);
