--- a/src/components/forms/formStyle.css
+++ b/src/components/forms/formStyle.css
@@ -11,6 +11,7 @@ fieldset{
     gap: 0.75rem;
     max-width: 100vw;
     align-items: center;
+    height: 100%;
 }
 
 input{
@@ -19,6 +20,8 @@ input{
 
 textarea{
     padding: 0.5rem;
+    height: 100%;
+    text-align: center;
 }
 
 button{
@@ -29,3 +32,9 @@ button{
     padding: 1ch;
     font-size: 1.3rem;
 }
+
+/* @media only screen and (min-width: 768px) {
+    fieldset{
+    grid-template-columns: 1fr 2fr;
+    }
+} */
